[gd_scene load_steps=2 format=3 uid="uid://dh5euieyoj0us"]

[ext_resource type="Script" path="res://HUD/hud_end_screen.gd" id="1_1oy2y"]

[node name="HUD_end_screen" type="CanvasLayer"]
script = ExtResource("1_1oy2y")

[node name="CongratulationTxt" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 100.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Congratulation"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"

[node name="ExitButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -150.0
offset_right = 50.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
text = "Exit"

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
